// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows rows to be defined 1`] = `
<textarea
  class="form__control textarea"
  rows="10"
/>
`;

exports[`renders as form group 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <TextArea
        ariaDescribedby={null}
        className="form__control textarea"
        idGuid="id-guid-1"
        key=".0"
        rows={2}
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with error, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <TextArea
        ariaDescribedby="error-guid-1"
        className="form__control textarea"
        idGuid="id-guid-1"
        key=".0"
        rows={2}
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        foo
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText and error, using two aria-describedby attributes 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <TextArea
        ariaDescribedby="error-guid-1 help-guid-1"
        className="form__control textarea"
        idGuid="id-guid-1"
        key=".0"
        rows={2}
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        bar
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <TextArea
        ariaDescribedby="help-guid-1"
        className="form__control textarea"
        idGuid="id-guid-1"
        key=".0"
        rows={2}
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders the basic input 1`] = `
<textarea
  class="form__control textarea"
  rows="2"
/>
`;

exports[`renders the basic input with aria-describedby 1`] = `
<textarea
  aria-describedby="foo"
  class="form__control textarea"
  rows="2"
/>
`;

exports[`renders the basic input with id 1`] = `
<textarea
  class="form__control textarea"
  id="foo"
  rows="2"
/>
`;

exports[`renders the basic input with idGuid 1`] = `
<textarea
  class="form__control textarea"
  id="bar"
  rows="2"
/>
`;

exports[`renders the basic input with placeholder 1`] = `
<textarea
  class="form__control textarea"
  placeholder="foo"
  rows="2"
/>
`;

exports[`renders the basic input with required 1`] = `
<textarea
  class="form__control textarea"
  required=""
  rows="2"
/>
`;

exports[`will prefer id over idGuid 1`] = `
<textarea
  class="form__control textarea"
  id="foo"
  rows="2"
/>
`;
